<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SearchActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7082 Photo Gallery Search"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title_search"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/title_search"
        android:layout_alignRight="@+id/title_search"
        android:layout_alignEnd="@+id/title_search"
        android:layout_marginTop="0dp"
        android:autofillHints="false"
        android:hint="@string/enter_start_date_2"
        android:id="@+id/search_fromDate" />

    <TextView
        android:text="From Date: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_fromDate"
        android:layout_alignLeft="@+id/title_search"
        android:layout_alignStart="@+id/title_search"
        android:layout_marginBottom="23dp"
        android:id="@+id/search_fromDateLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/search_fromDate"
        android:layout_alignRight="@+id/search_fromDate"
        android:layout_alignEnd="@+id/search_fromDate"
        android:layout_marginTop="0dp"
        android:hint="@string/enter_end_date"
        android:autofillHints="false"

        android:id="@+id/search_toDate" />

    <TextView
        android:text="To Date: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_toDate"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_marginTop="23dp"
        android:id="@+id/search_toDateLabel" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/search_toDate"
        android:layout_alignRight="@+id/search_fromDate"
        android:layout_alignEnd="@+id/search_fromDate"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_tag"
        android:autofillHints="false"
        android:id="@+id/search_tag" />

    <TextView
        android:text="Search Tag: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_tag"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_marginTop="18dp"
        android:id="@+id/search_tagLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/search_tag"
        android:layout_alignRight="@+id/search_fromDate"
        android:layout_alignEnd="@+id/search_fromDate"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_latitude"
        android:autofillHints="false"
        android:id="@+id/search_lat" />
    <TextView
        android:text="Search Lat: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_lat"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_marginTop="18dp"
        android:id="@+id/search_latLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/search_lat"
        android:layout_alignRight="@+id/search_fromDate"
        android:layout_alignEnd="@+id/search_fromDate"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_longitude"
        android:autofillHints="false"
        android:id="@+id/search_lon" />
    <TextView
        android:text="Search Long: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_lon"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_marginTop="18dp"
        android:id="@+id/search_lonLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/search_lon"
        android:layout_alignRight="@+id/search_fromDate"
        android:layout_alignEnd="@+id/search_fromDate"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_anything"
        android:autofillHints="false"
        android:id="@+id/search_auto" />
    <TextView
        android:text="Search Auto: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_auto"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_marginTop="18dp"
        android:id="@+id/search_autoLabel" />


    <Button
        android:text="Voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_autoLabel"
        android:layout_alignRight="@+id/search_fromDateLabel"
        android:layout_alignEnd="@+id/search_fromDateLabel"
        android:layout_marginTop="18dp"

        android:id="@+id/search_voice"
        android:onClick="voice" />


    <Button
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/search_toDate"
        android:layout_alignEnd="@+id/search_toDate"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp"
        android:id="@+id/search_cancel"
        android:onClick="cancel" />

    <Button
        android:text="Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/search_toDateLabel"
        android:layout_toEndOf="@+id/search_toDateLabel"
        android:id="@+id/search_search"
        android:onClick="search" />

</RelativeLayout>
